--- a/asp/Consuming_ASP.NET/Consuming_ASP.NET/Consuming_ASP.NET.csproj
+++ b/asp/Consuming_ASP.NET/Consuming_ASP.NET/Consuming_ASP.NET.csproj
@@ -470,7 +470,7 @@
     <Content Include="Views\Quested\Register.cshtml" />
     <Content Include="Views\Quested\Login.cshtml" />
     <Content Include="Views\Quested\Score.cshtml" />
-    <Content Include="Views\Home\Create.cshtml" />
+    <Content Include="Views\Quested\CreateForm.cshtml" />
     <Content Include="Views\Quested\Question.cshtml" />
   </ItemGroup>
   <ItemGroup>
